Newsletter Some refactoring as well User selection for newsletter management doesn't work Fixed UI color contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,7 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  place-items: center;
+  display: block;
   min-width: 320px;
   min-height: 100vh;
   height: 100%;
